--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 .background {
   background-image: url("https://images.unsplash.com/photo-1522850067562-a4c60453058d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80");
   background-size: cover;
+  background-position: center;
   min-height: 100vh;
   min-width: 40vw;
 }
@@ -58,6 +59,7 @@ button {
   box-shadow: 0 0 5px black;
   font-size: 1rem;
   font-weight: 800;
+  cursor: pointer;
 }
 
 .input-box {
@@ -74,7 +76,61 @@ input {
   border-radius: 5px;
 }
 
+input:focus {
+  outline-color: lightskyblue;
+  border-color: lightskyblue;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.4);
+}
+
+input:valid {
+  border-color: green;
+}
+
+input:invalid {
+  border-color: crimson;
+}
+
+.error {
+  border-color: crimson !important;
+}
+
+label {
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+}
+
 .form-container span {
   margin: 0 1rem;
   padding-left: 2rem;
+}
+
+legend {
+  grid-column: span 2;
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+@media screen and (max-width: 1028px) {
+  html {
+    font-size: 60%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    flex-direction: column;
+  }
+
+  .background {
+    min-height: 35vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo-div {
+    width: 50vw;
+    padding: 6rem 0;
+  }
 }
