modified:   README.md 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ form {
 button {
   height: 50px;
   width: 180px;
-  background-color: green;
+  background-color: #596d48;
   color: white;
   margin: 1rem 3rem;
   border-radius: 5px;
